Usando condicionais| exibindo usuarios baseado na condição no template

--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    {%for contato in contatos%}
+    {%for contato in contatos%} {%if contato.mostrar%}
     <tr>
       <td>
         <a href="{%url 'ver_contato' contato.id %}">{{contato.nome}}</a>
@@ -20,7 +20,7 @@
       <td>{{contato.telefone}}</td>
       <td>{{contato.categoria}}</td>
     </tr>
-    {% endfor %}
+    {%endif%} {% endfor %}
   </tbody>
 </table>
 
