--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -23,5 +23,18 @@
     {%endif%} {% endfor %}
   </tbody>
 </table>
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    {% for page in contatos.paginator.page_range%} {% if contatos.number %}
+    <li class="page-item">
+      <a class="page-link" href="?p={{page}}">{{page}}</a>
+    </li>
+    {%else%}
+    <li class="page-item active">
+      <a class="page-link" href="?p={{page}}">{{page}}</a>
+    </li>
+    {%endif%} {% endfor %}
+  </ul>
+</nav>
 
 {%endblock%}
