Ordenando e Filtrando valores

--- a/contatos/templates/contatos/index.html
+++ b/contatos/templates/contatos/index.html
@@ -4,6 +4,7 @@
 <table class="table">
   <thead>
     <tr>
+      <th>Id</th>
       <th>Nome</th>
       <th>Sobrenome</th>
       <th>Telefone</th>
@@ -11,8 +12,9 @@
     </tr>
   </thead>
   <tbody>
-    {%for contato in contatos%} {%if contato.mostrar%}
+    {%for contato in contatos%}
     <tr>
+      <td>{{contato.id}}</td>
       <td>
         <a href="{%url 'ver_contato' contato.id %}">{{contato.nome}}</a>
       </td>
@@ -20,7 +22,7 @@
       <td>{{contato.telefone}}</td>
       <td>{{contato.categoria}}</td>
     </tr>
-    {%endif%} {% endfor %}
+    {% endfor %}
   </tbody>
 </table>
 <nav aria-label="Page navigation example">
