--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,26 @@
     <!-- Page Content -->
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">{% block conteudo%}{%endblock%}</div>
+        <div class="col-lg-12">
+          <br /><br />
+          <form method="GET" action="{% url 'busca'%}">
+            <div class="form-group">
+              <div class="col-12">
+                <input
+                  class="form-control"
+                  type="search"
+                  id="search-input"
+                  placeholder="Digite sua pesquisa"
+                  type="text"
+                  name="termo"
+                  value="{{request.GET.termo}}"
+                />
+              </div>
+            </div>
+          </form>
+
+          {% block conteudo%}{%endblock%}
+        </div>
       </div>
     </div>
 
