--- a/contatos/templates/contatos/ver_contato.html
+++ b/contatos/templates/contatos/ver_contato.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %} {%block conteudo%}
 <h1 class="mt-5">{{contato.nome}} {{contato.sobrenome}}</h1>
+
+{%if contato.foto %}
+<p>
+  <img
+    src="{{contato.foto.url}}"
+    alt=""
+    style="max-width: 250px; height: auto"
+  />
+</p>
+{%endif%}
+
 <dl>
   <dt>ID</dt>
   <dd>{{contato.id}}</dd>
