--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
                   name="termo"
                   value="{{request.GET.termo}}"
                 />
+
+                {% include 'parciais/_messages.html' %}
               </div>
             </div>
           </form>
