--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
       <div class="row">
         <div class="col-lg-12">
           <br /><br />
+          {%if 'accounts' not in request.path%}
           <form method="GET" action="{% url 'busca'%}">
             <div class="form-group">
               <div class="col-12">
@@ -36,8 +37,7 @@
               </div>
             </div>
           </form>
-
-          {% block conteudo%}{%endblock%}
+          {%endif%} {% block conteudo%}{%endblock%}
         </div>
       </div>
     </div>
