--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,1 +1,2 @@
-{%extends 'base.html'%} {%block conteudo%} Login {%endblock%}
+{%extends 'base.html'%} {%block conteudo%} Login {% include
+'parciais/_messages.html'%} {%endblock%}
