--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -10,6 +10,7 @@
       class="form-control"
       aria-describedby="emailHelp"
       name="nome"
+      value="{{request.POST.nome}}"
     />
   </div>
 
@@ -20,6 +21,7 @@
       class="form-control"
       aria-describedby="emailHelp"
       name="sobrenome"
+      value="{{request.POST.sobrenome}}"
     />
   </div>
 
@@ -30,6 +32,7 @@
       class="form-control"
       aria-describedby="emailHelp"
       name="email"
+      value="{{request.POST.email}}"
     />
   </div>
 
@@ -40,6 +43,7 @@
       class="form-control"
       aria-describedby="emailHelp"
       name="usuario"
+      value="{{request.POST.usuario}}"
     />
   </div>
 
