Verificando usuarios autenticados e redirecionando

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,4 +1,6 @@
-{%extends 'base.html'%} {%block conteudo%}
+{%extends 'base.html'%} {%block titulo%}dashboard de {{ user }}
+{{user.sobrenome}} | {% endblock %} {%block conteudo%}
+
 <h1>Olá {{user.first_name}} {{user.last_name}}</h1>
 {%include 'parciais/_messages.html'%}
 <p>O seu nome de usuario é {{user}}.</p>
