--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,9 @@
-{%extends 'base.html'%} {%block conteudo%}
+{%extends 'base.html'%} {%block titulo%}login | {% endblock %} 
+{%block conteudo%}
+
 <h1>Login</h1>
+
+{% if not user.is_authenticated %}
 
 <form method="POST" action="{%url 'login'%}">
   {%include 'parciais/_messages.html'%} {% csrf_token %}
@@ -27,4 +31,8 @@
 
   <button type="submit" class="btn btn-primary">Fazer login</button>
 </form>
-{%endblock%}
+
+{%else%}
+<p>Você ja esta logado como {{user}}</p>
+<a href="{% url 'logout'%}">Clique aqui para sair</a>
+{%endif%} {%endblock%}
