--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,4 +1,5 @@
-{%extends 'base.html'%} {%block conteudo%}
+{%extends 'base.html'%} {%block titulo%}Cadastro | {% endblock %} {%block
+conteudo%}
 <h1>Cadastro</h1>
 
 <form method="POST" action="{%url 'register'%}">
