--- a/contatos/templates/contatos/ver_contato.html
+++ b/contatos/templates/contatos/ver_contato.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {%block conteudo%}
+{% extends 'base.html' %} {%block titulo%}{{contato.nome}}
+{{contato.sobrenome}}| {% endblock %} {%block conteudo%}
 <h1 class="mt-5">{{contato.nome}} {{contato.sobrenome}}</h1>
 
 {%if contato.foto %}
