--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
-    <title>Agenda</title>
+    <title>{%block titulo%}{%endblock%} Agenda</title>
     {% include 'parciais/_head.html' %}
     <!-- Bootstrap core CSS -->
     <link
